--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.15.3",
+    "jsonfile": "^3.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "scrape-it": "^3.3.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
