--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "todo-app",
-  "version": "0.1.0",
+  "name": "you-should-not-eat",
+  "version": "0.2.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "bulma": "^0.4.2",
+    "bulma-react": "0.0.8",
     "cheerio": "^1.0.0-rc.1",
+    "concurrently": "^3.4.0",
     "express": "^4.15.3",
+    "font-awesome": "^4.7.0",
+    "ismobile": "^1.0.1",
     "jsonfile": "^3.0.0",
+    "material-ui": "^0.18.3",
+    "mongoose": "^4.10.6",
+    "re-bulma": "^0.4.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-materialize": "^1.0.1",
+    "react-materializecss": "^0.12.0",
+    "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
-    "scrape-it": "^3.3.2"
+    "scrape-it": "^3.3.2",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
